--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 .logo {
     font-size: 24px;
     font-weight: bold;
-    color: #F9FaF8;
+    color: #F9FAF8;
 }
 
 .header-links {
@@ -27,6 +27,17 @@ body {
     display: flex;
     margin: 0;
     gap: 16px;
+}
+
+.hero-main-text {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.hero-secondary-text {
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .hero-image {
