--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,15 @@ body {
     gap: 16px;
 }
 
+.hero-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    width: 500px;
+    padding: 64px 0px 64px 196px;
+}
+
 .hero-main-text {
     font-size: 48px;
     font-weight: 900;
