--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,16 @@ body {
     gap: 16px;
 }
 
+.hero {
+    background-color: #1F2937;
+    padding: 64px 196px;
+}
 .hero-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     flex-wrap: wrap;
     width: 500px;
-    padding: 64px 0px 64px 196px;
 }
 
 .hero-main-text {
