--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,15 @@ body {
 .hero-image {
     width: 550px;
 }
+
+.info {
+    display: flex;
+    justify-content: center;
+    padding: 32px 256px;
+}
+
+.info-title {
+    color:#1F2937;
+    font-size: 36px;
+    font-weight: 900;
+}
