--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,9 @@ body {
 
 .info {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 32px 256px;
 }
 
@@ -80,4 +82,10 @@ body {
     color:#1F2937;
     font-size: 36px;
     font-weight: 900;
+}
+
+.info-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
