Fix signup class name conflict

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ body {
     color: #E5E7EB;
 }
 
-.signup {
+.signup-button {
     background-color: #3882F6;
     color: #F9FAF8;
     font-size: 18px;
