--- a/styles.css
+++ b/styles.css
@@ -21,12 +21,16 @@ body {
 }
 
 .header-links {
-    font-size: 18px;
-    color: #E5E7EB;
     list-style-type: none;
     display: flex;
     margin: 0;
     gap: 16px;
+}
+
+.header-links a {
+    color:#E5E7EB;
+    font-size: 18px;
+    text-decoration:none;
 }
 
 .hero {
