--- a/styles.css
+++ b/styles.css
@@ -43,12 +43,14 @@ body {
     flex: 1;
     justify-content: space-between;
     align-items: center;
+    gap: 8px;
 }
 .hero-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     flex-wrap: wrap;
+    flex-shrink: 1;
     width: 500px;
     gap: 24px;
 }
@@ -75,7 +77,10 @@ body {
 }
 
 .hero-image {
-    max-width: 550px;
+    flex: 1 1 100%;
+    min-width: 1px;
+    max-width: 50%;
+    height: auto;
 }
 
 .info {
