--- a/styles.css
+++ b/styles.css
@@ -155,8 +155,8 @@ body {
     flex: 1;
     justify-content:space-between;
     align-items: center;
-    padding: 64px 128px;
-    margin: 96px 300px;
+    padding: 64px 8%;
+    margin: 96px 18%;
     border-radius: 15px;
     border: none;
 }
